@@ -14,7 +14,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclTest.c,v 1.81 2004/04/06 22:25:55 dgp Exp $
+ * RCS: @(#) $Id: tclTest.c,v 1.82 2004/05/19 10:38:24 dkf Exp $
  */
 
 #define TCL_TEST
@@ -256,6 +256,8 @@ static int		TestfilelinkCmd _ANSI_ARGS_((ClientData dummy,
 static int		TestfeventCmd _ANSI_ARGS_((ClientData dummy,
 			    Tcl_Interp *interp, int argc, CONST char **argv));
 static int		TestgetassocdataCmd _ANSI_ARGS_((ClientData dummy,
+			    Tcl_Interp *interp, int argc, CONST char **argv));
+static int		TestgetintCmd _ANSI_ARGS_((ClientData dummy,
 			    Tcl_Interp *interp, int argc, CONST char **argv));
 static int		TestgetplatformCmd _ANSI_ARGS_((ClientData dummy,
 			    Tcl_Interp *interp, int argc, CONST char **argv));
@@ -633,6 +635,8 @@ Tcltest_Init(interp)
 	    TestHashSystemHashCmd, (ClientData) 0, 
 	    (Tcl_CmdDeleteProc *) NULL);
     Tcl_CreateCommand(interp, "testgetassocdata", TestgetassocdataCmd,
+            (ClientData) 0, (Tcl_CmdDeleteProc *) NULL);
+    Tcl_CreateCommand(interp, "testgetint", TestgetintCmd,
             (ClientData) 0, (Tcl_CmdDeleteProc *) NULL);
     Tcl_CreateCommand(interp, "testgetplatform", TestgetplatformCmd,
 	    (ClientData) 0, (Tcl_CmdDeleteProc *) NULL);
@@ -6603,4 +6607,34 @@ TestHashSystemHashCmd(clientData, interp, objc, objv)
     Tcl_DeleteHashTable(&hash);
     Tcl_AppendResult(interp, "OK", NULL);
     return TCL_OK;
+}
+
+/*
+ * Used for testing Tcl_GetInt which is no longer used directly by the
+ * core very much.
+ */
+static int
+TestgetintCmd(dummy, interp, argc, argv)
+    ClientData dummy;
+    Tcl_Interp *interp;
+    int argc;
+    CONST char **argv;
+{
+    if (argc < 2) {
+	Tcl_SetResult(interp, "wrong # args", TCL_STATIC);
+	return TCL_ERROR;
+    } else {
+        int val,i,total=0;
+	char buf[TCL_INTEGER_SPACE];
+
+	for (i=1 ; i<argc ; i++) {
+	    if (Tcl_GetInt(interp, argv[i], &val) != TCL_OK) {
+		return TCL_ERROR;
+	    }
+	    total += val;
+	}
+	TclFormatInt(buf, total);
+	Tcl_SetResult(interp, buf, TCL_VOLATILE);
+	return TCL_OK;
+    }
 }
